# FTLE-Ridge-Extraction

./: .gitignore  CMakeLists.txt  README.md
setups/MarRidges/: ABC3D-space_res-128.json  ABC3D-space_res-512.json  ABC3D-space_res-64.json  ABC3D.json  Amira-CTBL3D.json  Amira-HalfCylinder3D.json  DoubleGyre3D.json
setups/Stelter/: ABC3D-space_res-128.json  ABC3D-space_res-512.json  ABC3D-space_res-64.json  ABC3D-steps-10.json  ABC3D-steps-100.json  ABC3D-steps-20.json  ABC3D-steps-50.json  ABC3D.json  Amira-CTBL3D.json  Amira-HalfCylinder3D.json  DoubleGyre2D.json  DoubleGyre3D.json
src/: experiments.cpp  experiments.hpp  globals.hpp  main.cpp  math.hpp  params.hpp  setup.cpp  setup.hpp  test-ridges.cpp  types.hpp  utils.cpp  utils.hpp
src/flowsim/: flow.hpp  ftlefield.hpp  grid.hpp  marchingridges.cpp  marchingridges.hpp  numericdiff.hpp  particlesystem.cpp  particlesystem.hpp  ridgeinfo.hpp  scalarfield.hpp
src/flowsim/datasets/: abc.cpp  abc.hpp  amiraflow.cpp  amiraflow.hpp  doublegyre.cpp  doublegyre.hpp  forcedduffing.cpp  forcedduffing.hpp  movingcircleridges.cpp  movingcircleridges.hpp  tornado.cpp  tornado.hpp
src/images/: colormap.cpp  colormap.hpp  colors.hpp  texture.cpp  texture.hpp  visualization.cpp  visualization.hpp
